# learn_opencv

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
recognizer/: __main__.py  app.py  config.py  draw.py  layers.py  tags.py
recognizer/models/: adjusting.py  cat_dog.onnx  cat_dogs.onnx  cat_dogs.pth  squirrel.onnx  wolf.onnx  wolf_tiger.onnx
service/: __main__.py  app.py  app_torch.py
simple_net/: __main__.py  app.py
simple_net_cnn/: __main__.py  app.py  cnn.py  config.py  convertor.py  dataset.py  testing.py  train.py
